examples/tests/valid/test.w
let arr = ["hello"];

let handler = inflight () => {
  arr.at(0) == "hello";
};
